Updated Travis settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install: "pip install pylint"
+install: "pip install pylint sympy"
 # command to run tests
 script:
-  - nosetests
+  - "nosetests *.py"
 notifications:
   email: false
